# bpeasy

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  bpeasy.pyi  main.rs  pyproject.toml  requirements.txt  train.py
.github/workflows/: CI.yml  test.yml
benchmarks/: README.md  notebook.ipynb  train.py  train_bpe.py
benchmarks/data/: c4.jsonl
bpeasy/: __init__.py  convert.py  tokenizer.py
python/bpeasy/: __init__.py  utils.py
src/: iterator.rs  lib.old.rs  lib.rs  main.rs
tests/: test_convert.py  test_tokenizer.py  test_train_bpe.py  test_utils_bpe.py  train_test.py
