[package]
name = "bpeasy"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpeasy"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
fancy-regex = "0.12.0"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rayon = "1.8.0"
regex = "1.5.4"
serde_json = "1.0.108"


